--- a/pack.toml
+++ b/pack.toml
@@ -14,6 +14,12 @@ type = "local"
 path = "struct-gen"
 ipkg = "struct-gen.ipkg"
 
+[custom.all.array]
+type   = "git"
+url    = "https://github.com/stefan-hoeck/idris2-array"
+commit = "latest:main"
+ipkg   = "array.ipkg"
+
 [custom.all.ref1]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-ref1"
