--- a/pack.toml
+++ b/pack.toml
@@ -20,6 +20,12 @@ url    = "https://github.com/stefan-hoeck/idris2-array"
 commit = "latest:main"
 ipkg   = "array.ipkg"
 
+[custom.all.elin]
+type   = "git"
+url    = "https://github.com/stefan-hoeck/idris2-elin"
+commit = "latest:main"
+ipkg   = "elin.ipkg"
+
 [custom.all.ref1]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-ref1"
